# mp_sliders

./: Cargo.toml  README.md  Trunk.toml  build_release.sh  index.html  style.sass  watch.sh  watch_backend.sh  watch_frontend.sh
backend/: Cargo.toml  build.rs
backend/src/: clients.rs  lib.rs  main.rs  sliders.rs  websocket.rs
frontend/: Cargo.toml
frontend/src/: main.rs  state.rs  websocket.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
