[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
futures = "0.3.25"
futures-util = "0.3.25"
gloo-net = { version = "0.2.4", features = ["websocket"] }
gloo-timers = { version = "0.2.4", features = ["futures"] }
log = "0.4.17"
once_cell = "1.16.0"
protocol = { path = "../protocol" }
serde_json = "1.0.87"
sycamore = { version = "0.8.2", features = ["suspense"] }
wasm-bindgen-futures = "0.4.33"
web-sys = "0.3.60"
